# gitalong

./: .env.example  .env.production  .firebaserc  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  ABOUT.md  ACCESSIBILITY_IMPROVEMENTS_SUMMARY.md  AUTHENTICATION_FIXES.md  BACKEND_SUMMARY.md  BULLETPROOF_AUTH_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  EMAIL_SYSTEM_SUMMARY.md  FIREBASE_SETUP_GUIDE.md  FIXES_IMPLEMENTED.md  GITHUB_API_SUCCESS_SUMMARY.md  GITHUB_SETUP_GUIDE.md  GOOGLE_SIGNIN_SETUP_GUIDE.md  HYBRID_BACKEND_ARCHITECTURE.md  LICENSE  PITCH.md  PRESENTATION_SCRIPT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_FINAL_SUMMARY.md  PRODUCTION_READY_FIXES_COMPLETE.md  PRODUCTION_READY_SETUP.md  PRODUCTION_READY_SUMMARY.md  README.md  README_ML_SETUP.md  SETUP_GUIDE.md  WEB_DEPLOYMENT_GUIDE.md  WEB_GITHUB_AUTH_IMPLEMENTATION.md  WELCOME_EMAIL_GUIDE.md  analysis_options.yaml  analyze_output_2.txt  analyze_output_2_fixed.txt  analyze_output_fixed.txt  (+19 more)
backend/: .dockerignore  .env.example  BACKEND_GUIDE.md  Dockerfile  MATCHING_RANKING_ML_EXPLAINED.md  README.md  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  admin_ml.py  api.py  health.py  matches.py  messages.py  notifications.py  recommendations.py  repo_swipes.py  swipes.py  users.py
backend/app/core/: auth.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  github_data.py  match.py  message.py  project.py  user.py
backend/app/repositories/: match_repository.py  message_repository.py  ml_model_repository.py  repo_swipe_repository.py  swipe_repository.py  user_repository.py
backend/app/services/: ml_features.py  ml_ranker.py  ml_trainer.py  recommendation_engine.py  recommendation_service.py
backend/backend-node/: .env.example  package-lock.json  package.json  tsconfig.json
backend/backend-node/src/: app.ts  server.ts
backend/backend-node/src/config/: db.ts  env.ts  logger.ts
backend/backend-node/src/middleware/: auth.ts
backend/backend-node/src/models/: Analytics.ts  Match.ts  Message.ts  Notification.ts  Project.ts  User.ts
backend/backend-node/src/routes/: analytics.ts  auth.ts  matches.ts  messages.ts  notifications.ts  (+1 more)
(+260 files in other folders)
